# urazov_linux

./: 2.cpp  CMakeLists.txt  func.cpp  func.h  main.cpp  test1.f90  tetra.cpp
