cmake_minimum_required (VERSION 2.8)
project(hello_world)
set(SOURCE_EXE main.cpp)
set(SOURCE_LIB func.cpp)
find_package(Qt5Widgets REQUIRED)
include_directories(${Qt5Widgets_INCLUDES})
add_library(func SHARED ${SOURCE_LIB})
add_executable(main ${SOURCE_EXE})
target_link_libraries(main func)
target_link_libraries(main Qt5::Widgets)
